# Datathon-LastStraw

./: .env.example  .gitignore  AGENT_IMPLEMENTATION_PLAN.md  Dockerfile  QUICKSTART.md  README.md  WEBHOOK_QUICKSTART.md  check_embeddings_schema.py  config.py  demo_full_pipeline.py  demo_quick.py  feature_ideas.txt  feature_list.txt  postgres_schema_inspection.txt  requirements-lambda.txt  requirements.txt  server.py  test_all_tools.py  test_deployment_package.py  test_event_integration.py  test_msk_connection.py  test_webhooks.py
Docs/: AI_AGENT_INTEGRATION.md  PINECONE_INTEGRATION.md  WEBHOOK_SERVER_GUIDE.md  cloud_database_architecture.md  database_layer_guide.md  schema_dump.json
HR_Voice_Agent/: database_schema.md  unified_schema.sql
agent/: README.md  __init__.py  agent.py  analytics_processor.py  config.py  demo.py  embedding_pipeline.py  event_router.py  kafka_consumer.py  quick_start.py  test_agent.py
agents/: main.py  requirements.txt  supervisor.py
clickhouse/: __init__.py  (+6 more)
services/hr_voice_agent/: .dockerignore  .env.example  Dockerfile  README.md  auto_demo.py  demo_voice_review.py  pyproject.toml  requirements.txt  setup.py
services/hr_voice_agent/hr_voice_agent/: __init__.py  app.py  config.py  models.py
services/hr_voice_agent/hr_voice_agent/clients/: neo4j_client.py  pinecone_client.py  postgres_client.py
services/hr_voice_agent/hr_voice_agent/services/: context_builder.py  openai_client.py  question_generator.py  session_logic.py  session_store.py  tts.py
services/hr_voice_agent/hr_voice_agent/tools/: introspect.py  sync_pinecone.py
(+163 files in other folders)
